@@ -560,3 +560,23 @@ I. Lee Hetherington <ilh@lcs.mit.edu>
   Permission is hereby granted to use, modify, and distribute this program
   for any purpose provided this copyright notice and the one below remain
   intact.
+
+
+debian/local/input_id.c is stolen from udev and is:
+   Copyright (C) 2009 Martin Pitt <martin.pitt@ubuntu.com>
+   Portions Copyright (C) 2004 David Zeuthen, <david@fubar.dk>
+
+   This program is free software; you can redistribute it and/or modify it
+   under the terms of the GNU General Public License as published by
+   the Free Software Foundation; either version 2 of the License, or
+   (at your option) any later version.
+
+   This program is distributed in the hope that it will be useful, but
+   WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+   General Public License for more details.
+
+   You should have received a copy of the GNU General Public License
+   along with keymap; if not, write to the Free Software Foundation,
+   Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
+
