@@ -141,6 +141,9 @@ obj-$(DEB_BUILD_GNU_TYPE)/config.status: configure
 	  CFLAGS="$(CFLAGS)" \
 	  CPPFLAGS="$(CPPFLAGS)"
 
+ifeq ($(DEB_HOST_ARCH_OS), linux)
+build-stamp: debian/local/input_id
+endif
 
 build: build-stamp tests-stamp
 build-stamp: obj-$(DEB_BUILD_GNU_TYPE)/config.status
@@ -168,7 +171,7 @@ clean: xsfclean
 	rm -f m4/lt*.m4 m4/libtool.m4
 	find -name Makefile.in -delete
 	
-	dh_clean
+	dh_clean debian/local/input_id
 
 install: build
 	dh_testdir
@@ -220,6 +223,8 @@ binary-arch: build install
 ifeq ($(DEB_HOST_ARCH_OS), linux)
 	install -d debian/xserver-xorg-core/lib/udev/rules.d
 	install -m 644 debian/local/64-xorg-xkb.rules debian/xserver-xorg-core/lib/udev/rules.d
+	install -d debian/xserver-xorg-core/lib/xorg
+	install -m 755 debian/local/input_id debian/xserver-xorg-core/lib/xorg
 endif
 	dh_installdebconf -s
 	dh_installman -s
