@@ -2,6 +2,8 @@ xorg-server (2:1.7.2-2) UNRELEASED; urgency=low
 
   * debian/rules: upstream build system got fixed, no need to remove
     configure-generated files.
+  * Steal input_id helper from udev, install it in /lib/xorg.  Thanks, Martin
+    Pitt!
 
  -- Julien Cristau <jcristau@debian.org>  Sat, 28 Nov 2009 17:07:07 +0100
 
